# gitiffy

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/gg-askpass/: Cargo.toml
apps/gg-askpass/src/: main.rs
apps/gittify-bin/: Cargo.toml
apps/gittify-bin/src/: ascii.rs  main.rs
apps/gittify-egui/: Cargo.toml
apps/gittify-egui/src/: app.rs  canvas.rs  config.rs  home.rs  main.rs  menubar.rs  workspace.rs
crates/gg-app/: Cargo.toml
crates/gg-app/src/: lib.rs  state.rs
crates/gg-core/: Cargo.toml
crates/gg-core/src/: commit.rs  diff.rs  error.rs  graph.rs  lib.rs  oid.rs  refs.rs  status.rs
crates/gg-credentials/: Cargo.toml
crates/gg-credentials/src/: lib.rs
crates/gg-diff/: Cargo.toml
crates/gg-diff/src/: lib.rs
crates/gg-git/: Cargo.toml
crates/gg-git-read/: Cargo.toml
crates/gg-git-read/src/: convert.rs  lib.rs  reader.rs
crates/gg-git-read/tests/: smoke.rs
crates/gg-git-write/: Cargo.toml
crates/gg-git-write/src/: cancel.rs  git.rs  lib.rs  progress.rs  status.rs  types.rs  writer.rs
crates/gg-git-write/tests/: streaming.rs
crates/gg-git/src/: lib.rs
crates/gg-git/tests/: branch_ops.rs  commit_diff.rs  commit_ops.rs  hunk_staging.rs  repo_ops.rs  worktree.rs
crates/gg-graph/: Cargo.toml
crates/gg-graph/src/: layout.rs  lib.rs  tests.rs  topo.rs
crates/gg-ui-egui/: Cargo.toml
crates/gg-ui-egui/src/: lib.rs
crates/gg-ui-gpui/: Cargo.toml
crates/gg-ui-gpui/src/: lib.rs
crates/gg-ui-traits/: Cargo.toml
crates/gg-ui-traits/src/: lib.rs
