[package]
name = "gittify-egui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "egui desktop front-end for gittify."

[[bin]]
name = "gittify-egui"
path = "src/main.rs"

[dependencies]
gg-core.workspace = true
gg-graph.workspace = true
gg-diff.workspace = true
gg-git.workspace = true
gg-app.workspace = true
gg-ui-traits.workspace = true
eframe = "0.32.3"
egui = "0.32.3"
rfd = "0.17.2"
# Blocks a worker thread on rfd's async dialogs (which dispatch to the main
# thread on macOS, where the sync dialogs are main-thread-only).
pollster = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Rendered-markdown README preview on the landing page (tracks egui 0.32).
egui_commonmark = "0.21"

# Native menu bar (File / Edit / View / Go / Window / Help). macOS-only for
# now: on Windows/Linux the menus need window-handle plumbing eframe doesn't
# expose as cleanly, and the in-app ribbon already covers those platforms.
[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.19"
# Clipboard read for the Edit > Paste menu item (egui only exposes writes).
# Same crate egui-winit already uses, so it dedups.
arboard = "3"
