[package]
name = "gg-git-read"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Read path: gitoxide (gix) wrapped behind the RepoReader trait."

[dependencies]
gg-core.workspace = true
gix = { version = "0.84.0", default-features = false, features = ["sha1", "revision", "dirwalk", "status", "blob-diff", "max-performance-safe"] }
