[package]
name = "gg-ui-traits"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "The renderer abstraction (GraphCanvas, UiBackend) over GPUI/egui."

[dependencies]
gg-core.workspace = true

[dev-dependencies]
gg-graph.workspace = true
